$Id: ChangeLog,v 1.102 2004/11/10 21:35:25 h_oudejans Exp $

2004-11-11 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Fixed gcc compiler warning (signed/unsigned mismatch) in FOREACH code
	* First step for compiling using mingw:
		- Included <windows.h> where HANDLE is needed
		- Replaced FindWindow() by FindWindowByName() because mingw gets confused
		  about the FindWindow defined in winbase.h (included in windows.h)
		- Replaced __WINDOWS__ by __WXMSW__ (wx-config gives only -D__WXMSW__)
		- Fixed vc++ compiler error in CatapultConfigDlg (config.h is POSIX only).

2004-11-10 Herman Oudejans <hn.oudejans@quicknet.nl>
	* All static arrays that used to be looped through by for-loops, are
	  now looped by the new macro FOREACH

2004-11-10 Joost Yervante Damad <joost@lumatec.be>
	* debian packaging is working
	* make configurable:
		- default openmsx binary location
		- default openmsx system share dir location
		- creation of the desktop entries can be disabled

2004-11-06 Joost Yervante Damad <joost@lumatec.be>
	* make it possible to disable symlink for install
	* removed some ^M's from AUTHORS file

2004-11-06 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Removed all hard loopends used in combination with static arrays to
	  avoid problem with adding or removing elements in those arrays (e.g.
	  the media types).

2004-11-06 Manuel Bilderbeek <manuel@msxnet.org>
	* Removed all .Cas stuff, and replaced it by two cassetteplayer
	  controls, which still need to be made functional. Thanks to Herman
	  for finding some bugs. See his commit of today :)
	* Internally renamed all Tape(1) stuff to Cassette
	* Some layout tweaks (mainly esthetical) and added tool tip
	* Made Rewind and Force Play buttons functional
	* Disable Cassette stuff when there's no cassette port in the running
	  machine; disable buttons when there's no cassette selected
	  TODO: the controls get disabled briefly (during silent launch) and