@@ -1,0 +1,10 @@
+# $Id: cpu-ppc.mk,v 1.1 2004/07/10 15:25:01 mthuurne Exp $
+#
+# Configuration for PowerPC CPUs.
+
+# Big or little endian?
+BIG_ENDIAN:=true
+
+# Default build flavour.
+CATAPULT_FLAVOUR?=ppc
+
