@@ -1,0 +1,10 @@
+# $Id: cpu-x86_64.mk,v 1.2 2004/10/09 06:32:02 mthuurne Exp $
+#
+# Configuration for x86-64 CPUs.
+
+# Big or little endian?
+BIG_ENDIAN:=false
+
+# Default build flavour.
+CATAPULT_FLAVOUR?=opt
+
