@@ -1,0 +1,6 @@
+# $Id: platform-freebsd5.mk,v 1.2 2004/10/22 21:42:15 mthuurne Exp $
+#
+# Configuration for FreeBSD 5.x.
+
+include build/platform-x86-freebsd4.mk
+
