@@ -1,0 +1,5 @@
+# $Id: platform-linux-icc.mk,v 1.2 2004/07/30 18:15:16 mthuurne Exp $
+#
+# Configuration for Linux on x86 machines.
+
+include build/platform-linux.mk
